--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,6 +10,9 @@
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/font-awesome.css" rel="stylesheet">
 
+     <!-- Custom CSS -->
+    <link href="/css/scrolling-nav.css" rel="stylesheet">
+
     <!-- Custom styles for this template -->
     <link href="/css/custom.css" rel="stylesheet">
 
@@ -25,30 +28,39 @@
       <script src="/js/html5shiv.js"></script>
       <script src="/js/respond.min.js"></script>
     <![endif]-->
+<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
 
- <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container col-md-10 col-md-offset-1">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a id='logo' href="/"><img src="/img/expansionmaquinados2.png" alt="EMI Logo" class="img-responsive"/></a>
-        </div>
-
-        <!--Title option 
-        <p class="navbar-text">Expansión en Maquinados Industriales</p>-->
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav navbar-right animated zoomIn">
-            <li><a href="/">Home</a></li>
-            <li><a href="/skills/">Skills</a></li>
-            <li><a href="/about/">About</a></li>
-            <li><a href="/contact/">Contact</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <div class="container col-md-8 col-md-offset-2">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header page-scroll">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+       <a class="navbar-brand page-scroll" href="#page-top">Carlos Skills</a>
     </div>
-</div>
 
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li class="hidden">
+            <a class="page-scroll" href="#page-top"></a>
+        </li>
+         <li>
+                <a class="page-scroll" href="#about">About</a>
+            </li>
+            <li>
+                <a class="page-scroll" href="#contact">Contact</a>
+            </li>
+      </ul>
+      
+      
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 </head>
+
+</body>
