--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,10 +11,25 @@
 	<%= render 'layouts/header' %>
 
 	<div class="container">
+
 		<%= yield %>
 	</div>
 
 		<%= render 'layouts/footer' %>
+
+<!-- /container -->
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+<script src="/js/jquery-1.11.1.min.js"></script> 
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/analytics_lib.js"></script>
+  <!-- Scrolling Nav JavaScript -->
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/scrolling-nav.js"></script>
+
+</script>
+
 	
 </body>
 </html>
