--- a/app/assets/stylesheets/scrolling-nav.css
+++ b/app/assets/stylesheets/scrolling-nav.css
@@ -7,11 +7,13 @@
 body {
     width: 100%;
     height: 100%;
+    margin:0;padding:0;
 }
 
 html {
     width: 100%;
     height: 100%;
+    
 }
 
 @media(min-width:767px) {
@@ -21,9 +23,6 @@ html {
         transition: background .5s ease-in-out,padding .5s ease-in-out;
     }
 
-    .top-nav-collapse {
-        padding: 0;
-    }
 }
 
 /* Demo Sections - You can use these as guides or delete them - the scroller will work with any sort of height, fixed, undefined, or percentage based.
@@ -32,30 +31,29 @@ of those sections to manage the look and feel of the site. */
 
 .intro-section {
     height: 100%;
-    padding-top: 100px;        
-    padding-bottom: 100px;
+    padding-top: 150px;
+    padding-bottom: 150px;
     text-align: center;
+    background: #333;
+    background: url('7.1.JPG') no-repeat center center;
+    background-size: cover;
+    width: 100%;
+
 }
 
 .about-section {
     height: 100%;
-    padding-top: 100px;        
-    padding-bottom: 100px;
+    padding-top: 150px;
+    padding-bottom: 150px;
     text-align: center;
-    background-color:#777;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: 100% auto;
-    background-size: cover;
-    font-family: 'lato',Arial,Helvetica,Sans-Serif;
-    margin-bottom: 50px;
-
+    background: #eee;
 }
+
 
 .contact-section {
     height: 100%;
     padding-top: 150px;
     padding-bottom: 150px;
     text-align: center;
+    background: #444;
 }
