--- a/app/views/pages/_about.html.erb
+++ b/app/views/pages/_about.html.erb
@@ -1,10 +1,12 @@
-<body>
-<section id="about">
-	<div class="container about-section clearfix">	            
-      <h1 class="animated fadeIn">About Section2</h1>
-       <p><strong>Usage Instructions:</strong> Make sure to include the <code>scrolling-nav.js</code>, <code>jquery.easing.min.js</code>, and <code>scrolling-nav.css</code> files. To make a link smooth scroll to another section on the page, give the link the <code>.page-scroll</code> class and set the link target to a corresponding ID on the page.</p>
-      <a class="btn btn-default page-scroll" href="#about">Click Me to Scroll Down!</a>
-	                      
-	</div>
+
+<section id="about" class="about-section" >
+  <div class="container">
+      <div class="row">
+          <div class="col-lg-12">
+              <h1>About Section</h1>
+              <p><strong>Usage Instructions:</strong> Make sure to include the <code>scrolling-nav.js</code>, <code>jquery.easing.min.js</code>, and <code>scrolling-nav.css</code> files. To make a link smooth scroll to another section on the page, give the link the <code>.page-scroll</code> class and set the link target to a corresponding ID on the page.</p>
+                    <a class="btn btn-default page-scroll" href="#intro">Click Me to Scroll Down!</a>
+          </div>
+      </div>
+  </div>
 </section>
-</body>
