--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
-  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <nav class="navbar navbar-inverse navbar-fixed-top transparent" role="navigation">
     <div class="container col-md-8 col-md-offset-2">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header page-scroll">
@@ -9,23 +9,44 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-         <a class="navbar-brand page-scroll" href="#page-top">Carlos Skills</a>
+
+         <a class="navbar-brand page-scroll hidden" href="#page-top">Carlos Ortega Morales</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
-          <li class="hidden">
-              <a class="page-scroll" href="#page-top"></a>
+        <ul class="nav navbar-nav">
+          <li>
+            <a class="page-scroll" href="#page-top">Welcome</a>
           </li>
-           <li>
-                  <a class="page-scroll" href="#about">About</a>
-              </li>
-              <li>
-                  <a class="page-scroll" href="#contact">Contact</a>
-              </li>
+          <li>
+            <a class="page-scroll" href="#inddes">ID</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="#entrepreneur">Entrepreneur</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="#photo">Photo</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="#master">Master</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="#glass">Glass</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="#wood">Wood</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="#web">Web</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="#conclusion">Conclusion</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="#contact">Contact</a>
+          </li>
         </ul>
-        
         
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
