--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,11 +3,45 @@
 <%= render 'pages/intro' %>
 
 
-<!-- About Section -->
+<!-- ID Section -->
     
-<%= render 'pages/about' %>
+<%= render 'pages/inddes' %>
+
+<!-- Entrepreneur Section -->
+
+<%= render 'pages/entrepreneur' %>
+
+
+<!-- Photo Section -->
+    
+<%= render 'pages/photo' %>
            
 
-<!-- Contact Section -->
+<!-- Master Section -->
 
+<%= render 'pages/master' %>
+
+
+<!-- Glass Section -->
+
+<%= render 'pages/glass' %>
+
+
+<!-- Wood Section -->
+    
+<%= render 'pages/wood' %>
+           
+
+<!-- Web Section -->
+
+<%= render 'pages/web' %>
+
+<!-- conclusion Section -->
+
+<%= render 'pages/conclusion' %>
+
+
+<!-- Contact Section -->
+    
 <%= render 'pages/contact' %>
+           
