--- a/app/views/layouts/_scripts.html.erb
+++ b/app/views/layouts/_scripts.html.erb
@@ -5,8 +5,12 @@
 <script src="/js/jquery-1.11.1.min.js"></script> 
 <script src="/js/bootstrap.min.js"></script>
 <script src="/js/analytics_lib.js"></script>
+
   <!-- Scrolling Nav JavaScript -->
-    <script src="js/jquery.easing.min.js"></script>
-    <script src="js/scrolling-nav.js"></script>
+    <script src="/js/jquery.easing.min.js"></script>
+    <script src="/js/scrolling-nav.js"></script>
+
+
 
 </script>
+
