--- a/app/views/pages/_intro.html.erb
+++ b/app/views/pages/_intro.html.erb
@@ -1,10 +1,13 @@
  <section id="intro" class="intro-section animated fadeIn">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <h1>Scrolling Nav</h1>
-                    <p><strong>Usage Instructions:</strong> Make sure to include the <code>scrolling-nav.js</code>, <code>jquery.easing.min.js</code>, and <code>scrolling-nav.css</code> files. To make a link smooth scroll to another section on the page, give the link the <code>.page-scroll</code> class and set the link target to a corresponding ID on the page.</p>
-                    <a class="btn btn-default page-scroll animated zoomIn" href="#about">Click Me to Scroll Down!</a>
+                <div class="col-md-8 col-md-offset-2">
+                    <h1>Hello! My name is Carlos Ortega!</h1>
+                        <h3>Surfing through the web I was amazed by your company philosophy, and I said to myself, <em>I want to work with those guys!!!</em></h3> 
+                        <br/> 
+                        <h3>I have a particular set of skills developed during the last five-ish years, and we are more than our resume, right? So I decided to explain a little bit more my qualifications!<h3/> 
+                        <h2>Thanks!, you rock!!!</h2>
+                    
                 </div>
             </div>
         </div>
