added backgrounds and rippler effect for buttons

--- a/app/assets/stylesheets/boostrap_customization.css.scss
+++ b/app/assets/stylesheets/boostrap_customization.css.scss
@@ -5,10 +5,10 @@
 
 $body-bg: #FFF;
 $font-family-sans-serif: 'Lato';
-$font-size-base: 14px;
+$font-size-base: 15px;
 $navbar-inverse-bg: #ecf0f1;
 $navbar-inverse-link-color: #FFF;
-$navbar-inverse-link-hover-color: #d35400;
+$navbar-inverse-link-hover-color: #000;
 
 
 @import 'bootstrap';
