--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -38,10 +38,10 @@
             <a class="page-scroll" href="#wood">Wood</a>
           </li>
           <li>
-            <a class="page-scroll" href="#web">Web</a>
+            <a class="page-scroll" href="#web">Coding</a>
           </li>
           <li>
-            <a class="page-scroll" href="#conclusion">Conclusion</a>
+            <a class="page-scroll" href="#conclusion">Why me?</a>
           </li>
           <li>
             <a class="page-scroll" href="#contact">Contact</a>
