--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
 
     <!-- Animate styles for this template -->
     <link rel="stylesheet" href="/css/animate.css">
+    <link rel="stylesheet" href="/css/rippler.min.css">
 
     <!-- Icons styles for this template -->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
