--- a/app/views/pages/_intro.html.erb
+++ b/app/views/pages/_intro.html.erb
@@ -3,10 +3,12 @@
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                     <h1>Hello! My name is Carlos Ortega!</h1>
-                        <h3>Surfing through the web I was amazed by your company philosophy, and I said to myself, <em>I want to work with those guys!!!</em></h3> 
+                        <h3>I am currently in a job hunt, and surfing through the web I was amazed by your company philosophy and said to myself,<br/>  
+                            <em>I want to work with those guys!!!</em></h3> 
                         <br/> 
-                        <h3>I have a particular set of skills developed during the last five-ish years, and we are more than our resume, right? So I decided to explain a little bit more my qualifications!<h3/> 
-                        <h2>Thanks!, you rock!!!</h2>
+                        <h3>I have a particular set of skills developed during the last six-ish years as designer, and since we are more than our resume. I decided to explain you more in depth my qualifications.<h3/> 
+                        <h2>Thanks! You Rock!!!</h2>
+                        <a class="page-scroll btn btn-default" href="#inddes">An Industrial Designer?</a>
                     
                 </div>
             </div>
