--- a/app/views/pages/_photo.html.erb
+++ b/app/views/pages/_photo.html.erb
@@ -3,7 +3,7 @@
   <div class="container">
       <div class="row">
           <div class="col-md-12">
-              <h1> Section</h1>
+              <p> I always had a passion for photography, specially since I have developed a keen eye for details as a designer. I believe is important to highlight what makes your product so important and special. </p>
               
           </div>
       </div>
