--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,44 +2,56 @@
 
 <%= render 'pages/intro' %>
 
+<div class="container"><br/></div>
 
 <!-- ID Section -->
     
 <%= render 'pages/inddes' %>
 
+<div class="container"><br/></div>
+
 <!-- Entrepreneur Section -->
 
 <%= render 'pages/entrepreneur' %>
 
+<div class="container"><br/></div>
 
 <!-- Photo Section -->
     
 <%= render 'pages/photo' %>
            
+<div class="container"><br/></div>
 
 <!-- Master Section -->
 
 <%= render 'pages/master' %>
+
+<div class="container"><br/></div>
 
 
 <!-- Glass Section -->
 
 <%= render 'pages/glass' %>
 
+<div class="container"><br/></div>
 
 <!-- Wood Section -->
     
 <%= render 'pages/wood' %>
            
+<div class="container"><br/></div>
 
 <!-- Web Section -->
 
 <%= render 'pages/web' %>
 
+<div class="container"><br/></div>
+
 <!-- conclusion Section -->
 
 <%= render 'pages/conclusion' %>
 
+<div class="container"><br/></div>
 
 <!-- Contact Section -->
     
