--- a/app/views/pages/_inddes.html.erb
+++ b/app/views/pages/_inddes.html.erb
@@ -3,7 +3,7 @@
   <div class="container">
       <div class="row">
           <div class="col-md-12">
-              <h1> Section</h1>
+              <h1> Industrial Designer</h1>
               
           </div>
       </div>
