--- a/app/views/pages/_inddes.html.erb
+++ b/app/views/pages/_inddes.html.erb
@@ -1,10 +1,18 @@
 
 <section id="inddes" class="inddes-section" >
-  <div class="container">
+  <div class="container-fluid">
       <div class="row">
-          <div class="col-md-12">
-              <h1> Industrial Designer</h1>
-              
+        <div class="block-text col-md-4 col-md-offset-1 wow animated fadeInLeft">
+          <h1> Industrial Designer</h1>
+          	<p>I have a BS in Industrial Design from the ITESM from Mexico. <br/>
+          	As a product designer, I have successfully done several projects in Mexico and USA, winning several awards. My basic training as a designer, taught me to be aware of the full cycles of products and services, from conceptualization, user and product recycling. </p>
+        		
+          	<h3>Project title:</h3>
+          	<h4>EXTREME ORDINARY EXHIBITION <h4/>
+						<h4><em>Project: "Coram: Time Unit Device" </em></h4>
+						<%= link_to " Read more in Core77", "http://goo.gl/z84FvP", target: "blank", class: "btn btn-default rippler rippler-inverse fa fa-newspaper-o"%>
+          	</div>
+					</div>
           </div>
       </div>
   </div>
