--- a/app/views/pages/_intro.html.erb
+++ b/app/views/pages/_intro.html.erb
@@ -2,14 +2,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <h1>Hello! My name is Carlos Ortega!</h1>
-                        <h3>I am currently in a job hunt, and surfing through the web I was amazed by your company philosophy and said to myself,<br/>  
-                            <em>I want to work with those guys!!!</em></h3> 
+                    <h2>Hello! My name is Carlos Ortega!</h2>
+                        <h4>I am currently in a job hunt, and surfing through the web I was amazed by your company philosophy and said to myself:<h4>
+                         <br/>  
+                            <h3><em>I want to work with those guys!!!</em></h3> 
                         <br/> 
-                        <h3>I have a particular set of skills developed during the last six-ish years as designer, and since we are more than our resume. I decided to explain you more in depth my qualifications.<h3/> 
+                        <h4>I have a particular set of skills developed during the last six-ish years as designer, and since we are more than our resume. I decided to explain you more in depth my qualifications.<h4/> 
                         <h2>Thanks! You Rock!!!</h2>
-                        <a class="page-scroll btn btn-default" href="#inddes">An Industrial Designer?</a>
-                    
+                        <br />
+                        <a class="page-scroll btn btn-primary fa fa-cube fa-lg" href="#inddes"> What? An Industrial Designer?</a> 
                 </div>
             </div>
         </div>
