--- a/app/assets/stylesheets/scrolling-nav.css
+++ b/app/assets/stylesheets/scrolling-nav.css
@@ -13,6 +13,10 @@ body {
 html {
     width: 100%;
     height: 100%;
+    font:  "Lato", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizelegibility;
     
 }
 
@@ -30,9 +34,9 @@ The padding is very important to make sure the scrollspy picks up the right area
 of those sections to manage the look and feel of the site. */
 
 .intro-section {
-    height: 850px;
-    padding-top: 150px;
-    padding-bottom: 150px;
+    height: 100%;
+    padding-top: 110px;
+    padding-bottom: 250px;
     text-align: center;
     color:#7f8c8d;
     background: #ecf0f1;
@@ -44,12 +48,11 @@ of those sections to manage the look and feel of the site. */
 
  .inddes-section {
     height: 850px;
-    padding-top: 250px;
-    padding-bottom: 150px;
-    text-align: left;
-    color:#FFF;
-    background: #95a5a6;
-    /*background: url('7.1.JPG') no-repeat center center;*/
+    padding-top: 225px;
+     text-align: left;
+    color:#000;
+    background: #6C7A89;
+    background: url('Body.jpg') no-repeat center center;
     background-size: cover;
     width: 100%;
  }
@@ -119,7 +122,7 @@ of those sections to manage the look and feel of the site. */
     text-align: center;
     color:#FFF;
     background: #2c3e50;
-    background: url('glass-me.jpg') no-repeat center center;
+    background: url('mirror6.jpg') no-repeat center center;
     background-size: cover;
     width: 100%;
  }
