--- a/app/views/pages/_contact.html.erb
+++ b/app/views/pages/_contact.html.erb
@@ -5,8 +5,7 @@
                 <div class="col-lg-12 ">
                     <h1 class="animated fadeIn">Contact Section</h1>
 
-                     <p><strong>Usage Instructions:</strong> Make sure to include the <code>scrolling-nav.js</code>, <code>jquery.easing.min.js</code>, and <code>scrolling-nav.css</code> files. To make a link smooth scroll to another section on the page, give the link the <code>.page-scroll</code> class and set the link target to a corresponding ID on the page.</p>
-                    <a class="btn btn-default page-scroll" href="#intro">Click Me to Scroll Down!</a>
+                    <a class="btn btn-default page-scroll" href="#intro">You made it! Back to the top?</a>
                       
                 </div>
             </div>
