--- a/app/assets/stylesheets/boostrap_customization.css.scss
+++ b/app/assets/stylesheets/boostrap_customization.css.scss
@@ -14,6 +14,7 @@ $navbar-inverse-link-hover-color: #000;
 @import 'bootstrap';
 
  .navbar.transparent{
+    /*margin-top: 50px;  --- offset margin of navbar. */
     border-width: 0px;
     -webkit-box-shadow: 0px 0px;
     box-shadow: 0px 0px;
